Eliminada propiedad Peluquero del turno

--- a/TPC-Equipo-A/Site.Master
+++ b/TPC-Equipo-A/Site.Master
@@ -36,7 +36,7 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand" href="../Default.aspx">Peluquería</a>
+                <a class="navbar-brand" href="~/">Peluquería</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
